# ai-audit-ledger

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ledger-server  README.md  SECURITY.md  docker-compose.yml  go.mod
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
LICENSES/: BSL-1.1.md
cloud/: README.md
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: chain.rs  lib.rs  merkle.rs  record.rs
crates/ledger-server/: Cargo.toml
crates/ledger-server/src/: main.rs
crates/report-cli/: Cargo.toml
crates/report-cli/src/: main.rs
data/: README.md
docs/: architecture.md  compliance-report.md  licensing.md  otel-mapping.md  phases.md
examples/go-app/: main.go
schema/: README.md  auditrecord.example.json  auditrecord.schema.json
sdk/go/audit/: audit_test.go  builder.go  client.go  exporter.go  multi_exporter.go  otel_exporter.go  sequence_provider_http.go  signer.go  types.go
