[package]
name = "report-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
ledger-core = { path = "../ledger-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
